--- a/custom_components/ikea_obegransad_led/manifest.json
+++ b/custom_components/ikea_obegransad_led/manifest.json
@@ -8,6 +8,6 @@
   "integration_type": "device",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/lucaam/ikea-obegransad-led/issues",
-  "requirements": ["aiohttp", "voluptuous"],
+  "requirements": ["aiohttp"],
   "version": "0.0.1"
 }
