--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,9 +1,8 @@
 name: Draft a release note
 on:
   push:
-    branches:
-      - main
-      - master
+    tags:
+      - "v*.*.*"
 jobs:
   draft_release:
     name: Release Drafter
@@ -11,5 +10,9 @@ jobs:
     steps:
       - name: Run release-drafter
         uses: release-drafter/release-drafter@v6.1.0
+        with:
+          name: ${{ github.ref_name }}
+          tag: ${{ github.ref_name }}
+          version: "${{ github.ref_name }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
