--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
+
   - repo: local
     hooks:
       - id: black
@@ -14,12 +15,31 @@ repos:
         language: system
         types: [python]
         require_serial: true
-      - id: flake8
-        name: flake8
-        entry: flake8
+
+      - id: ruff
+        name: ruff
+        entry: ruff
         language: system
         types: [python]
         require_serial: true
+        args:
+          - --config
+          - .ruff.toml
+          - --select
+          - ALL
+          - --ignore
+          - ANN101
+          - --ignore
+          - ANN401
+          - --ignore
+          - D203
+          - --ignore
+          - D212
+          - --ignore
+          - COM812
+          - --ignore
+          - ISC001
+
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.2.1
     hooks:
