--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,8 +23,7 @@ repos:
         types: [python]
         require_serial: true
         args:
-          - --config
-          - .ruff.toml
+          - check
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.2.1
